force-app/main/default/objects/Lab_Test__c/Lab_Test__c.object-meta.xml
<CustomObject>
    <label>Lab Test</label>
    <nameField>
        <displayFormat>TEST-{0000}</displayFormat>
        <label>Test ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>