force-app/main/default/objects/Lab_Test__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Lab Tests</relationshipLabel>
    <relationshipName>Patient_Lab_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>