force-app/main/default/objects/Lab_Test__c/fields/Test_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_Time__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>