force-app/main/default/objects/Lab_Test__c/fields/Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Result__c</fullName>
    <label>Test Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>