force-app/main/default/objects/Lab_Test__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test_Type</valueSetName>
    </valueSet>
</CustomField>